vercel build script

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "vercel-build": "node index.js && prisma db push"
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
