--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "vercel-build": "node index.js && prisma db push"
+    "vercel-build": "prisma db push"
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
